--- a/app/assets/stylesheets/pages/_picture.scss
+++ b/app/assets/stylesheets/pages/_picture.scss
@@ -26,3 +26,17 @@
 .gray-icon {
   color: lightgray;
 }
+.p-picture {
+  font-size: 12px;
+}
+@media only screen and (max-width: 700px) {
+  .p-picture {
+    font-size: 9px;
+  }
+  p {
+    font-size: 11px;
+  }
+  .title-picture {
+    margin: 1vh 0;
+  }
+}
