--- a/app/assets/stylesheets/pages/_presentation.scss
+++ b/app/assets/stylesheets/pages/_presentation.scss
@@ -41,3 +41,9 @@
     width: 120px;
   }
 }
+@media only screen and (max-width: 700px) {
+  .intro-category {
+    width: 100% !important;
+  }
+
+}
