ajax start working

--- a/app/views/pages/auteure.html.erb
+++ b/app/views/pages/auteure.html.erb
@@ -10,7 +10,8 @@
           <br>
         <p style="margin-left: 20% !important;width: 120px;"><%= @auteur.motto %></p> <br>
 
-        <p style="margin-left: 40% !important;width: 130px;"><%= @auteur.thanks %></p>
+        <p style="margin-left: 40% !important;width: 130px;"><%= @auteur.thanks %>
+        </p>
       </div>
     </div>
 
