--- a/app/views/shared/_navbar-black.html.erb
+++ b/app/views/shared/_navbar-black.html.erb
@@ -11,6 +11,7 @@
       <%= link_to 'Ajouter une catégorie', new_category_path, class:"navbar-wagon-item navbar-wagon-link #{ params[:controller] == "categories" && params[:action] == "new" ? 'active-tab' : ''}"  %>
       <%= link_to "L'auteure", edit_user_path(current_user), class:"navbar-wagon-item navbar-wagon-link #{ params[:controller] == "users" ? 'active-tab' : ''}"  %>
       <%= link_to "Générale", edit_user_registration_path, class:"navbar-wagon-item navbar-wagon-link "  %>
+      <%= link_to "Categories", categories_path, class:"navbar-wagon-item navbar-wagon-link "  %>
     </div>
   <% end %>
 
