--- a/app/views/shared/_navbar-black.html.erb
+++ b/app/views/shared/_navbar-black.html.erb
@@ -5,13 +5,13 @@
 
   <% if user_signed_in? && params[:action] != "presentation" && params[:controller] != "pages" && params[:title].nil? %>
     <div class="categroies-section">
-      <% @categories.order('created_at ASC').each do |category| %>
-        <%= link_to category.title, category_path(category), class: "navbar-wagon-item navbar-wagon-link #{ params[:id].to_i ==  category.id ? 'active-tab' : ''} " %>
-      <% end %>
-      <%= link_to 'Ajouter une catégorie', new_category_path, class:"navbar-wagon-item navbar-wagon-link #{ params[:controller] == "categories" && params[:action] == "new" ? 'active-tab' : ''}"  %>
+      <!-- <#% @categories.order('created_at ASC').each do |category| %>
+        <#%= link_to category.title, category_path(category), class: "navbar-wagon-item navbar-wagon-link #{ params[:id].to_i ==  category.id ? 'active-tab' : ''} " %>
+      <#% end %> -->
+      <%= link_to "Accueil", categories_path, class:"navbar-wagon-item navbar-wagon-link "  %>
+
       <%= link_to "L'auteure", edit_user_path(current_user), class:"navbar-wagon-item navbar-wagon-link #{ params[:controller] == "users" ? 'active-tab' : ''}"  %>
-      <%= link_to "Générale", edit_user_registration_path, class:"navbar-wagon-item navbar-wagon-link "  %>
-      <%= link_to "Categories", categories_path, class:"navbar-wagon-item navbar-wagon-link "  %>
+      <%= link_to "Mon compte", edit_user_registration_path, class:"navbar-wagon-item navbar-wagon-link "  %>
     </div>
   <% end %>
 
