--- a/app/views/shared/_navbar-general.html.erb
+++ b/app/views/shared/_navbar-general.html.erb
@@ -14,7 +14,7 @@
 <% if user_signed_in?  %>
   <div class="edit-website hidden-xs">
     <% if Category.all.count > 0 %>
-      <%= link_to category_path(Category.first) do %>
+      <%= link_to categories_path do %>
         <i class="far fa-edit"></i>
       <% end %>
     <% else %>
