--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -25,12 +25,12 @@
                     input_html: { autocomplete: "new-password" }, label:"Confirmation du nouveau mot de passe :"  %>
       </div>
 
-      <div class="form-actions">
-        <%= f.button :submit, "Modifier" %>
+      <div class="btns-actions">
+        <%= link_to 'Retour', 'javascript:history.back()', style:'color:black;' %>
+        <%= f.button :submit, "Modifier", class:"btn-action  gray-background" %>
       </div>
     <% end %>
 
-    <%= link_to "Back", :back %>
   </div>
 
 </div>
