--- a/app/views/pages/auteure.html.erb
+++ b/app/views/pages/auteure.html.erb
@@ -6,11 +6,11 @@
         <p style="margin-top: 20px !important; font-size: 10px"><%= @auteur.description %> </p>
       </div>
       <div class="texts-auteur" style="margin-left: 10%">
-        <p style="width: 122px;"><%= @auteur.intro %></p>
+        <p style="width: 170px;"><%= @auteur.intro %></p>
           <br>
-        <p style="margin-left: 20% !important;width: 120px;"><%= @auteur.motto %></p> <br>
+        <p style="width: 180px;"><%= @auteur.motto %></p> <br>
 
-        <p style="margin-left: 40% !important;width: 130px;"><%= @auteur.thanks %>
+        <p style="width: 240px;"><%= @auteur.thanks %>
         </p>
       </div>
     </div>
