--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -161,6 +161,8 @@
     padding-right: 20px;
     width: 190px;
     height: 82vh;
+    overflow: scroll;
+    padding-top: 30px;
   }
   #navbar_black {
     .background-xs {
