--- a/app/views/pages/auteure.html.erb
+++ b/app/views/pages/auteure.html.erb
@@ -1,9 +1,11 @@
 <div class="container-all-dimension">
 
-    <div id="auteur-presentation" style="display: flex;">
+    <div id="auteur-presentation">
       <div class="div-picture-background" style="margin-top: 3%">
-        <%= cl_image_tag @auteur.photo, style:"height:#{@auteur.hauteur}px;" %>
-        <p style="margin-top: 20px !important; font-size: 10px"><%= @auteur.description %> </p>
+        <%= cl_image_tag @auteur.photo, style:"height:#{@auteur.hauteur}px;", id:"size-xs", class:"hidden-xs" %>
+        <p style="margin-top: 20px !important; font-size: 10px" class="hidden-xs"><%= @auteur.description %> </p>
+        <%= cl_image_tag @auteur.photo, style:"width:60vw", class:"visible-xs" %>
+        <p style="margin-top: 10px !important; font-size: 9px" class="visible-xs"><%= @auteur.description %> </p>
       </div>
       <div class="texts-auteur" style="margin-left: 10%">
         <p style="width: 170px;"><%= @auteur.intro %></p>
