--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,6 +19,7 @@ body {
     padding: 0 5%;
     position: static;
     width: 100vw;
+    padding-bottom: 40px;
   }
   .dropdown-menu-burger {
     background-color: white;
