--- a/app/assets/stylesheets/pages/_presentation.scss
+++ b/app/assets/stylesheets/pages/_presentation.scss
@@ -15,9 +15,9 @@
 
 @media only screen and (max-width:800px) {
   .intro-category {
-  background-color: $pink;
-  width: 100%;
-  padding: 5%;
+    background-color: $pink;
+    width: 100%;
+    padding: 5%;
   }
 }
 
@@ -48,14 +48,12 @@
 
 
 @media only screen and (max-width: 700px) {
-  .intro-category {
-    width: 100% !important;
-  }
   #auteur-presentation {
     display: flex;
     flex-direction: column;
-    padding-bottom: 70px;
   }
-
+  .texts-auteur {
+    padding-top: 20px;
+  }
 
 }
