--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -159,7 +159,7 @@
     background-color: #313131 !important;
     margin: -20% -52%;
     padding-right: 20px;
-    width: 190px;
+    width: 170px;
     height: 82vh;
     overflow: scroll;
     padding-top: 20px;
@@ -171,13 +171,13 @@
   }
   #navbar_home {
     .background-xs {
-      background-color: #313131 !important;
+      background-color: #ffffff00 !important;
     }
   }
   .navbar-wagon-dropdown-menu li > a, li {
     padding-bottom: 10px;
   }
   .margin-by-category {
-    padding: 10px 0px;
+    padding: 5px 0px;
   }
 }
