--- a/app/views/pages/auteure.html.erb
+++ b/app/views/pages/auteure.html.erb
@@ -1,4 +1,4 @@
-<div class="container-all-dimension">
+<div class="container-all-dimension" style="margin-bottom: 40px;">
 
     <div id="auteur-presentation">
       <div class="div-picture-background" style="margin-top: 3%">
@@ -20,8 +20,5 @@
 </div>
 
 
-<%= render 'shared/footer', category: @category %>
-
-
-
+  <%= render 'shared/footer', category: @category, colorfooter: "black" %>
 
