--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,5 +13,5 @@
 
 
 <div id="footer-white">
-  <%= render 'shared/footer', category: nil %>
+  <%= render 'shared/footer', category: nil, colorfooter: nil %>
 </div>
