--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <div id="fb-root"></div>
-<div id="footer">
+<div id="footer" style=" <%= colorfooter.nil? ? "": "background-color: white;" %> ">
   <div class="links-contact">
     <% if params[:action] == "home" %>
 
