--- a/app/views/pages/auteure.html.erb
+++ b/app/views/pages/auteure.html.erb
@@ -10,7 +10,7 @@
       <div class="texts-auteur" style="margin-left: 10%">
         <p style="width: 170px;"><%= @auteur.intro %></p>
           <br>
-        <p style="width: 180px;"><%= @auteur.motto %></p> <br>
+        <p style="width: 180px;" id="moto"><%= @auteur.motto %></p> <br>
 
         <p style="width: 240px;"><%= @auteur.thanks %>
         </p>
