--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,9 +4,9 @@
     <% if params[:action] == "home" %>
 
       <div id="absolute-left" class="hidden-xs">
-        <p  style="font-size: 10px;">Tous contenus <i class="far fa-copyright"></i> Chloé Rolland</p>
+        <p  style="font-size: 10px;">All content &#169 Chloé Rolland 2018</p>
         <%= link_to root_path do%>
-        Site internet <i class="far fa-heart" style="color:#EE5F5B; font-weight: 600;"></i> Donatien Rolland
+          Site internet Donatien Rolland
         <% end %>
       </div>
     <% end %>
