--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,6 +7,14 @@
   }
 }
 
+// font-weight: 400 pour la home page
+// home: icon fontsize 18px
+// // p font-weight 400
+// eloigner la dropdown de 250%
+
+
+// auteur: remonter p à 5%
+
 
 .links-contact {
   position: relative;
