--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -37,6 +37,7 @@
     }
     a {
       color: white;
+      font-weight: 400 !important;
     }
     a:hover {
       // border-bottom: 1px solid white;
