--- a/app/assets/stylesheets/pages/_presentation.scss
+++ b/app/assets/stylesheets/pages/_presentation.scss
@@ -36,6 +36,12 @@
 #photo-auteur {
   height: 500px;
 }
+#auteur-presentation{
+  .texts-auteur {
+    margin-top: 5%;
+    margin-left: 10%;
+  }
+}
 .texts-auteur {
   p {
     width: 120px;
