--- a/app/views/pages/auteure.html.erb
+++ b/app/views/pages/auteure.html.erb
@@ -7,8 +7,9 @@
         <%= cl_image_tag @auteur.photo, style:"width:60vw", class:"visible-xs" %>
         <p style="margin-top: 10px !important; font-size: 9px" class="visible-xs"><%= @auteur.description %> </p>
       </div>
-      <div class="texts-auteur" style="margin-left: 10%">
-        <p style="width: 170px;"><%= @auteur.intro %></p>
+
+      <div class="texts-auteur">
+        <p style="width: 170px; "><%= @auteur.intro %></p>
           <br>
         <p style="width: 180px;" id="moto"><%= @auteur.motto %></p> <br>
 
