--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -43,7 +43,7 @@
         </div>
       <% end %>
 
-      <div class="col-lg-3 col-xs-12 col-sm-4 upload-label eql-height_<%= album.title_no_space %>" style="margin-bottom: 20px;" >
+      <div class="col-lg-3 col-xs-12 col-sm-4 upload-label" style="margin-bottom: 20px; height: 177px;" >
         <%= link_to new_category_picture_path(@category, query: album.id ), class:"padding-center" do %>
         <p class="padding-center">Ajouter une photo</p>
         <% end %>
