--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -2,6 +2,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
+  z-index: 1000;
   .dropup {
     padding: 8px;
   }
@@ -75,9 +76,6 @@
     top: -6% !important;
     left: 130% !important;
   }
-  .dropdown-menu i {
-    // font-size: 20px !important;
-  }
   .links-contact i {
     font-size: 14px;
   }
@@ -85,7 +83,7 @@
     font-size: 14px;
   }
   #footer-white .dropup {
-    padding: 8px 8px 0px 8px;
+    padding: 8px 8px 6px 8px;
   }
   .dropdown-toggle i:hover {
     font-size: 14px !important;
