--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -65,9 +65,6 @@
     a {
       color: black;
     }
-    a:hover {
-      // border-bottom: 1px solid black;
-    }
   }
 }
 
@@ -75,6 +72,10 @@
     text-decoration: underline;
     // border-bottom: 1px solid black;
   a {
+    text-decoration: underline;
+    // border-bottom: 1px solid black;
+  }
+  a:active {
     text-decoration: underline;
     // border-bottom: 1px solid black;
   }
@@ -175,10 +176,69 @@
       background-color: #ffffff00 !important;
     }
   }
-  .navbar-wagon-dropdown-menu li > a, li {
+  .dropdown-menu-burger li > a, li {
+    padding-bottom: 10px;
+  }
+  .dropdown-menu-burger li > a, li:active {
     padding-bottom: 10px;
   }
   .margin-by-category {
     padding: 5px 0px;
   }
 }
+
+
+// dropdown menu smartphone
+#backOpen {
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #80808070;
+  display: none;
+  z-index: 3;
+}
+
+#mySidenav {
+  z-index: 4;
+  display: none;
+  background-color: gray;
+  height: 100vh;
+  position: absolute;
+  padding-top: 12vh;
+  width: 70vw;
+  right: 0;
+  top: 0;
+  animation: sidenavanmie 0.5s;
+  color: white;
+  padding-left: 5%;
+  li {
+      color: white;
+    }
+    a {
+      color: white;
+    }
+  #closeNav {
+    top: 5px;
+    right: 5px;
+    position: absolute;
+    font-size: 30px !important;
+  }
+}
+
+@keyframes sidenavanmie {
+  0% { width: 0}
+  100% { width: 70vw }
+}
+
+
+
+
+
+
+
+
+
