add scrolling in side bar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -215,6 +215,7 @@
   animation: sidenavanmie 0.5s;
   color: white;
   padding-left: 5%;
+  padding-bottom: 60px;
   li {
       color: white;
     }
