test scrolling side bar

--- a/app/views/shared/_dropdown-burger.html.erb
+++ b/app/views/shared/_dropdown-burger.html.erb
@@ -30,7 +30,7 @@
     <div id="backOpen"></div>
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" id="closeNav">&times;</a>
-      <div class="scrolling" style="overflow: scroll;">
+      <div class="scrolling">
         <% @categories.each do |category| %>
           <% if category.visible %>
             <div class="margin-by-category">
