--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -77,16 +77,22 @@
     left: 130% !important;
   }
   .links-contact i {
-    font-size: 14px;
+    font-size: 25px !important;
+    // font-size: 14px;
   }
   #footer-white .dropdown-toggle i {
-    font-size: 14px;
+    font-size: 25px !important;
+    // font-size: 14px;
   }
   #footer-white .dropup {
     padding: 8px 8px 6px 8px;
   }
-  .dropdown-toggle i:hover {
-    font-size: 14px !important;
+  .dropdown-toggle i {
+    // font-size: 14px !important;
+    font-size: 24px !important;
+  }
+   .dropup {
+    padding: 8px 8px 12px 8px !important;
   }
 }
 #absolute-left {
