--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -19,7 +19,7 @@
     <% end %>
 
 
-    <div class="dropup">
+    <div class="dropdown">
       <div class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="display: flex;">
         <i class="far fa-share-square whiteJsNavBar" ></i>
       </div>
