--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,7 +3,7 @@
   bottom: 0;
   width: 100%;
   z-index: 1000;
-  .dropup {
+  .dropdown {
     padding: 8px;
   }
 }
@@ -31,7 +31,7 @@
     font-size: 25px;
   }
 }
-.dropup .dropdown-menu, .navbar-fixed-bottom .dropdown .dropdown-menu {
+.dropdown .dropdown-menu, .navbar-fixed-bottom .dropdown .dropdown-menu {
   left: 15vw !important;
 }
 
@@ -72,8 +72,8 @@
   align-items: center;
 }
 @media only screen and (max-width: 700px) {
-  .dropup .dropdown-menu, .navbar-fixed-bottom .dropdown .dropdown-menu {
-    top: -6% !important;
+  .dropdown .dropdown-menu, .navbar-fixed-bottom .dropdown .dropdown-menu {
+    top: 6% !important;
     left: 130% !important;
   }
   .links-contact i {
@@ -84,14 +84,14 @@
     font-size: 25px !important;
     // font-size: 14px;
   }
-  #footer-white .dropup {
+  #footer-white .dropdown {
     padding: 8px 8px 6px 8px;
   }
   .dropdown-toggle i {
     // font-size: 14px !important;
     font-size: 24px !important;
   }
-   .dropup {
+   .dropdown {
     padding: 8px 8px 12px 8px !important;
   }
 }
@@ -162,12 +162,12 @@
     }
 }
 
-#footer-white .dropup .dropdown-menu, .navbar-fixed-bottom .dropdown .dropdown-menu {
+#footer-white .dropdown .dropdown-menu, .navbar-fixed-bottom .dropdown .dropdown-menu {
     top: 0%;
 }
 
 
-.dropup .dropdown-menu, .navbar-fixed-bottom .dropdown .dropdown-menu {
+.dropdown .dropdown-menu, .navbar-fixed-bottom .dropdown .dropdown-menu {
     top: -6%;
     bottom: 0;
     margin-bottom: 0px;
