--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -110,7 +110,7 @@
 
 .navbar-wagon-dropdown-menu li > a:hover, li:hover {
   display: block;
-  padding-bottom: 2px;
+  // padding-bottom: 2px;
   // text-decoration: none;
 }
 
