--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,12 +54,11 @@
 
   </body>
   <script>
-    function hideAddressBar(){
-        if(document.documentElement.scrollHeight<window.outerHeight/window.devicePixelRatio)
-          document.documentElement.style.height=(window.outerHeight/window.devicePixelRatio)+'px';
-        setTimeout(window.scrollTo(1,1),0);
-      }
-      window.addEventListener("load",function(){hideAddressBar();});
-      window.addEventListener("orientationchange",function(){hideAddressBar();});
+    window.addEventListener("load",function() {
+    setTimeout(function(){
+            // This hides the address bar:
+            window.scrollTo(0, 1);
+        }, 0);
+    });
   </script>
 </html>
