--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
     <meta name="twitter:creator" content="@chloerolland">
     <meta name="twitter:image:src" content="https://res.cloudinary.com/dnks6vpqk/image/upload/v1539331237/banner_image.jpg">
 
+
+
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
@@ -54,11 +56,6 @@
 
   </body>
   <script>
-    window.addEventListener("load",function() {
-    setTimeout(function(){
-            // This hides the address bar:
-            window.scrollTo(0, 1);
-        }, 0);
-    });
+    window.scrollTo(0,1)
   </script>
-</html>
+</hteml>
