--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,33 +1,51 @@
 <!-- <div id="fb-root"></div> -->
 <div id="footer" style=" <%= colorfooter.nil? ? "": "background-color: white;" %> ">
-  <div class="links-contact">
-    <% if params[:action] == "home" %>
-
       <div id="absolute-left" class="hidden-xs">
+    <% if params[:action] == "home" %>
         <p  style="font-size: 10px;">All content &#169 Chloé Rolland 2018</p>
         <%= link_to root_path do%>
           Site internet Donatien Rolland
         <% end %>
-      </div>
     <% end %>
+      </div>
 
+  <div class="links-contact">
     <%= link_to 'https://www.instagram.com/hellolaterre_cr/?hl=fr', target: "_blank" do %>
       <i class="fab fa-instagram whiteJsNavBar"></i>
     <% end %>
     <%= mail_to User.where(auteur: true).first.email do %>
       <i class="far fa-envelope whiteJsNavBar"></i>
     <% end %>
+     <%= link_to '#', id:"openLinks" do %>
+      <i class="far fa-share-square whiteJsNavBar" ></i>
+    <% end %>
+  </div>
+  <div class="direction-share-links hidden">
+    <a onclick="myFunction()" style="cursor: pointer;"><i class="fas fa-link whiteJsNavBar"></i> <span class="hidden-xs">Copier le lien</span></a>
+    <a href="mailto:?&amp;body=<%= url_for(:only_path => false) %>&amp;"><i class="far fa-envelope whiteJsNavBar"></i><span class="hidden-xs"> Envoyer par mail</span></a>
+    <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fimage.herokuapp.com%2F&amp;src=sdkpreparse" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,left=,top=,screenX=,screenY=,width=300,height= 400');" target="_blank" title="Share This on Facebook">
+      <i class="fab fa-facebook-f whiteJsNavBar"></i><span class="hidden-xs">Facebook</span>
+    </a>
+  </div>
+
+  <div style="display: none">
+    <input type="text" value="<%= url_for(:only_path => false) %>" id="myInput">
+  </div>
+
+</div>
 
 
-    <div class="dropdown">
+
+<!--
+<div class="dropdown">
       <div class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="display: flex;">
         <i class="far fa-share-square whiteJsNavBar" ></i>
       </div>
       <div class="dropdown-menu">
-        <!-- Dropdown menu links -->
+
         <div class="direction-share-links">
           <p onclick="myFunction()" style="cursor: pointer;"><i class="fas fa-link whiteJsNavBar"></i> <span class="hidden-xs">Copier le lien</span></p>
-          <a href="mailto:?&amp;body=<%= url_for(:only_path => false) %>&amp;"><i class="far fa-envelope whiteJsNavBar"></i><span class="hidden-xs"> Envoyer par mail</span></a>
+          <a href="mailto:?&amp;body=<#%= url_for(:only_path => false) %>&amp;"><i class="far fa-envelope whiteJsNavBar"></i><span class="hidden-xs"> Envoyer par mail</span></a>
           <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fimage.herokuapp.com%2F&amp;src=sdkpreparse" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,left=,top=,screenX=,screenY=,width=300,height= 400');" target="_blank" title="Share This on Facebook">
             <i class="fab fa-facebook-f whiteJsNavBar"></i><span class="hidden-xs">Facebook</span>
           </a>
@@ -35,22 +53,9 @@
       </div>
     </div>
 
-  </div>
-</div>
+ -->
 
 
 
-<div style="position: absolute; left: 0; bottom: 0; display: none;">
-  <input type="text" value="<%= url_for(:only_path => false) %>" id="myInput">
-</div>
 
-<script>
-  function myFunction() {
-    var copyText = document.getElementById("myInput");
-    copyText.select();
-    document.execCommand("copy");
-    alert("Copied the text: " + copyText.value);
-  }
-
-</script>
 
